<resources>
    <string name="app_name">dene</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_bmi">BMI</string>
    <string name="menu_home">Menu</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_dietlist">DietList</string>
    <string name="burger">Burger</string>
    <string name="brokoli">Brokoli</string>
    <string name="domates">Domates</string>
    <string name="iskender">İskender</string>
    <string name="islim">İslim</string>
    <string name="pizza">Pizza</string>
    <string name="tavukdoner">Tavuk Döner</string>
</resources>